# flexit_bacnet

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  bac0_points_dump.txt  pyproject.toml
examples/: change_mode.py  current_mode.py  device_info.py  discover.py  fireplace_mode.py  toggle_cooker_hood.py
flexit_bacnet/: __init__.py  bacnet.py  device.py  device_property.py  discover.py  network.py  nordic.py  typing.py
