[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexit_bacnet"
version = "2.1.1"
authors = [
  { name="Piotr Buliński" },
]
description = "Client BACnet library for Flexit Nordic series of air handling units."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piotrbulinski/flexit_bacnet"
"Bug Tracker" = "https://github.com/piotrbulinski/flexit_bacnet/issues"